force-app/main/default/objects/Contact/fields/Clinical_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Appointment__c</fullName>
    <label>Clinical Appointment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>