force-app/main/default/objects/Contact/fields/Grants_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Grants_System_ID__c</fullName>
    <externalId>true</externalId>
    <label>Grants System ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>