force-app/main/default/objects/Contact/fields/Institute__c.field-meta.xml
<CustomField>
    <fullName>Institute__c</fullName>
    <label>Institute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Krembil Research Institute</fullName>
            </value>
            <value>
                <fullName>Toronto General Hospital Research Institute</fullName>
            </value>
            <value>
                <fullName>Toronto Western Research Institute</fullName>
            </value>
            <value>
                <fullName>Princess Margaret Cancer Centre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>