force-app/main/default/objects/Contact/fields/Is_AAR_Evaluator__c.field-meta.xml
<CustomField>
    <fullName>Is_AAR_Evaluator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is AAR Evaluator</label>
    <type>Checkbox</type>
</CustomField>