force-app/main/default/objects/Contact/fields/Is_Active_PI__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_PI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active PI</label>
    <type>Checkbox</type>
</CustomField>