force-app/main/default/objects/Contact/fields/Is_Active_Researcher__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_Researcher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active Researcher</label>
    <type>Checkbox</type>
</CustomField>