force-app/main/default/objects/Contact/fields/UHN_PI_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>UHN_PI_Profile_URL__c</fullName>
    <label>UHN PI Profile URL</label>
    <type>Url</type>
</CustomField>